# typed_orm

./: Cargo.toml
src/: error.rs  json.rs  lib.rs  postcard.rs  sqlite.rs  table_name.rs  util.rs  uuid.rs
typed_orm_proc/: Cargo.toml
typed_orm_proc/src/: lib.rs
